--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Flutter Festival Songdo Example Project
 
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -15,6 +15,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   provider: ^6.0.2
   get: ^4.6.1
+  flutter_hooks: ^0.18.4
+  hooks_riverpod: ^1.0.4
 
 dev_dependencies:
   flutter_test:
