--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.0.1
-  provider: ^6.0.2
-  get: ^4.6.1
-  flutter_hooks: ^0.18.4
-  hooks_riverpod: ^1.0.4
+  flutter_bloc: ^8.1.3
+  provider: ^6.1.1
+  get: ^4.6.6
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
