--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.3.1 <4.0.0"
 
 dependencies:
   flutter:
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.1
   get: ^4.6.6
   flutter_riverpod: ^2.4.9
+  june: ^0.8.5
 
 dev_dependencies:
   flutter_test:
